@@ -5,6 +5,7 @@ export(TAXONOMY_RANKS)
 export(ZTransform)
 export(addContaminantQC)
 export(addNotContaminantQC)
+export(addPerSampleDominantFeatures)
 export(addPerSampleDominantTaxa)
 export(agglomerateByPrevalence)
 export(bestDMNFit)
@@ -17,6 +18,7 @@ export(calculateNMDS)
 export(calculateOverlap)
 export(calculateUniFrac)
 export(calculateUnifrac)
+export(countDominantFeatures)
 export(countDominantTaxa)
 export(estimateDivergence)
 export(estimateDiversity)
@@ -32,9 +34,13 @@ export(getExperimentCrossAssociation)
 export(getExperimentCrossCorrelation)
 export(getPrevalence)
 export(getPrevalentAbundance)
+export(getPrevalentFeatures)
 export(getPrevalentTaxa)
+export(getRareFeatures)
 export(getRareTaxa)
+export(getTopFeatures)
 export(getTopTaxa)
+export(getUniqueFeatures)
 export(getUniqueTaxa)
 export(loadFromBiom)
 export(loadFromMetaphlan)
@@ -47,6 +53,7 @@ export(makeTreeSummarizedExperimentFromPhyloseq)
 export(meltAssay)
 export(mergeCols)
 export(mergeRows)
+export(perSampleDominantFeatures)
 export(perSampleDominantTaxa)
 export(performDMNgroupCV)
 export(plotNMDS)
@@ -61,7 +68,9 @@ export(runOverlap)
 export(runUnifrac)
 export(splitByRanks)
 export(subsampleCounts)
+export(subsetByPrevalentFeatures)
 export(subsetByPrevalentTaxa)
+export(subsetByRareFeatures)
 export(subsetByRareTaxa)
 export(subsetFeatures)
 export(subsetSamples)
@@ -76,6 +85,7 @@ exportMethods("relabundance<-")
 exportMethods(ZTransform)
 exportMethods(addContaminantQC)
 exportMethods(addNotContaminantQC)
+exportMethods(addPerSampleDominantFeatures)
 exportMethods(addPerSampleDominantTaxa)
 exportMethods(addTaxonomyTree)
 exportMethods(agglomerateByPrevalence)
@@ -93,6 +103,7 @@ exportMethods(calculateRDA)
 exportMethods(calculateUniFrac)
 exportMethods(calculateUnifrac)
 exportMethods(checkTaxonomy)
+exportMethods(countDominantFeatures)
 exportMethods(countDominantTaxa)
 exportMethods(estimateDivergence)
 exportMethods(estimateDiversity)
@@ -108,10 +119,14 @@ exportMethods(getExperimentCrossAssociation)
 exportMethods(getExperimentCrossCorrelation)
 exportMethods(getPrevalence)
 exportMethods(getPrevalentAbundance)
+exportMethods(getPrevalentFeatures)
 exportMethods(getPrevalentTaxa)
+exportMethods(getRareFeatures)
 exportMethods(getRareTaxa)
 exportMethods(getTaxonomyLabels)
+exportMethods(getTopFeatures)
 exportMethods(getTopTaxa)
+exportMethods(getUniqueFeatures)
 exportMethods(getUniqueTaxa)
 exportMethods(isContaminant)
 exportMethods(isNotContaminant)
@@ -120,6 +135,7 @@ exportMethods(mapTaxonomy)
 exportMethods(meltAssay)
 exportMethods(mergeCols)
 exportMethods(mergeRows)
+exportMethods(perSampleDominantFeatures)
 exportMethods(perSampleDominantTaxa)
 exportMethods(performDMNgroupCV)
 exportMethods(relAbundanceCounts)
@@ -129,7 +145,9 @@ exportMethods(runOverlap)
 exportMethods(runRDA)
 exportMethods(splitByRanks)
 exportMethods(subsampleCounts)
+exportMethods(subsetByPrevalentFeatures)
 exportMethods(subsetByPrevalentTaxa)
+exportMethods(subsetByRareFeatures)
 exportMethods(subsetByRareTaxa)
 exportMethods(subsetFeatures)
 exportMethods(subsetSamples)
