@@ -31,3 +31,4 @@ Changes in version 1.3.x
 + getExperimentCrossCorrelation name changed to getExperimentCrossAssociation
 + getExperimentCrossAssociation: user's own function supported, sort in mode == table enabled
 + getExperimentCrossAssociation: added MARGIN & paired options, efficiency of algorithm improved
++ Added *Features aliases for *Taxa functions
